# dynamic-ipset

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  dirs  install  postinst  postrm  prerm  rules
dynamic_ipset/: __init__.py  cli.py  config.py  constants.py  exceptions.py  fetcher.py  ipset.py  systemd.py  validator.py
etc/dynamic-ipset/: config
etc/dynamic-ipset/config.d/: .gitkeep
molecule/: requirements.txt
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
systemd/: dynamic-ipset@.service  dynamic-ipset@.timer
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_fetcher.py  test_integration.py  test_integration_config.py  test_integration_ipset.py  test_ipset.py  test_systemd.py  test_validator.py
